OAK-11307: make use of collections in tests consistent